Refactor vm package
- Add package-info.java
- Rename JClassObject, JMockClassObject
- add javadocs